--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ img{
     height: auto;
 }
 
+a{
+    text-decoration: none;
+}
+
 /* cok satır gösterme */
 .line-clamp-2{
 display: -webkit-box;
@@ -66,4 +70,20 @@ overflow: hidden;
 /* header */
 header div{
     max-height: 48rem;
+}
+
+/* main*/
+
+/*footer*/
+footer{
+    height: 18rem;
+}
+
+footer ul li i{
+    margin-top: 1rem;
+    color:blueviolet;
+}
+
+footer ul li i a{
+    color:white;
 }
