--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ img{
     max-width: 100%;
     height: auto;
 }
+img:hover{
+    opacity: .9;
+    cursor: pointer;
+}
 
 a{
     text-decoration: none;
@@ -32,6 +36,8 @@ display: -webkit-box;
 -webkit-line-clamp:2;
 -webkit-box-orient: vertical;
 overflow: hidden;
+text-align: justify;
+letter-spacing: 0.0001rem;
 }
 
 .line-clamp-3{
@@ -39,6 +45,8 @@ display: -webkit-box;
 -webkit-line-clamp:3;
 -webkit-box-orient: vertical;
 overflow: hidden;
+text-align: justify;
+letter-spacing: 0.0001rem;
 }
 
 
@@ -47,8 +55,19 @@ display: -webkit-box;
 -webkit-line-clamp:4;
 -webkit-box-orient: vertical;
 overflow: hidden;
+text-align: justify;
+letter-spacing: 0.0001rem;
+
 }
 
+.line-clamp-5{
+    display: -webkit-box;
+    -webkit-line-clamp:5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-align: justify;
+    letter-spacing: 0.0001rem;
+    }
 
 /* LOGO */
 #logo{
@@ -86,4 +105,10 @@ footer ul li i{
 
 footer ul li i a{
     color:white;
+}
+
+
+#footer_sub{
+    height: 4rem;
+    padding-top:1rem;
 }
